example/SyntaxError/mismatched_parentheses.ada
with Ada.Text_IO;
use Ada.Text_IO;
procedure Main is
begin
    put(Hello;
end Main;
